test_suite/tests/ui/float/derive/ord_without_eq.rs
use nutype::nutype;

#[nutype(validate(finite))]
#[derive(PartialEq, PartialOrd, Ord)]
pub struct Size(f64);

fn main() {}
